# Hydraulics

./: .gitattributes  .gitignore  BUG_FIXES.md  CHANGELOG.md  CLAUDE.md  FEATURE_DN_COMPARISON.md  FEATURE_NIST_API.md  IMPLEMENTATION_PLAN_V2.md  LICENSE  PERFORMANCE_OPTIMIZATION.md  PROJECT_ENHANCEMENT_SUMMARY.md  QUICKFIX.md  README.md  RELEASE_NOTES_V2.2.0.md  TEST_REPORT.md  TEST_REPORT_V2.md  USABILITY_IMPROVEMENTS.md  WORKFLOW.md  hydro_calc.py  profile_iapws.py  profile_iapws_cached.py  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.py  setup.sh  test.bat  test_pump_pressure_table.py  test_pump_pressure_units.py  verify_cache.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: PN_GRADE_IMPLEMENTATION_PLAN.md  contributing.md  getting_started.md
src/hydraulics/: __init__.py
src/hydraulics/calculators/: __init__.py  segment.py
src/hydraulics/core/: __init__.py  equations.py  pipes.py  properties.py  water_api.py
src/hydraulics/io/: __init__.py  config.py  reports.py
src/hydraulics/models/: __init__.py  artery.py  zones.py
src/hydraulics/ui/: __init__.py  cli.py  wizards.py
src/hydraulics/utils/: __init__.py  conversions.py
tests/: __init__.py  test_performance_iapws.py  test_pn_grades.py  test_water_api.py
tests/integration/: test_dn_comparison.py  test_edge_cases_comprehensive.py  test_input_validation.py  test_smoke.py
