[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydraulics"
version = "2.0.0"
description = "Hydraulic piping calculation tool for irrigation systems"
readme = "README.md"
authors = [
    {name = "Hydraulics Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Hydrology",
]
keywords = ["hydraulics", "irrigation", "darcy-weisbach", "colebrook-white", "hdpe", "piping"]
dependencies = [
    "numpy>=1.24.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/USERNAME/Hydraulics"
Documentation = "https://github.com/USERNAME/Hydraulics/docs"
Repository = "https://github.com/USERNAME/Hydraulics"
"Bug Tracker" = "https://github.com/USERNAME/Hydraulics/issues"

[project.scripts]
hydro-calc = "hydraulics.ui.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
